# turret

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  face.sh  facerec.py  facial_rec  facial_rec.cpp  firebase_server.py  turret.py
